--- a/styles/index.css
+++ b/styles/index.css
@@ -44,13 +44,37 @@ h2 {
     filter: brightness(0.9);
 }
 
+#n1, #operator, #n2{
+    max-width: 150px;
+    height: 0;
+    margin-top: 10px;
+    padding: 1rem;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: #eaeaf0;
+}
+#n1 {
+    margin-top: 50px;
+}
+#final-result {
+    width: 80%;
+    height: 150px;
+    margin-top: 10px;
+    background: #eaeaf0;
+    word-break: break-all;
+    padding: 1rem;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .result {
     width: 500px;
     height: 400px;
     background: #f0f0f5;
-    padding: 3rem;
-    align-items: center;
     text-align: center;
-    position: relative;
+    align-items: center;
     top: 0;
+    display: flex;
+    flex-direction: column;
 }
